fixes motion card dark mode bug

--- a/src/components/MotionCards/_motion-cards.scss
+++ b/src/components/MotionCards/_motion-cards.scss
@@ -29,6 +29,7 @@ $container-offset: 4px;
     display: flex;
     flex-flow: column nowrap;
     gap: $spacing-stack-16;
+    align-items: center;
     width: min(100%, #{$motion-content-max});
     margin: 0 auto;
     padding-top: $spacing-stack-40;
@@ -46,6 +47,10 @@ $container-offset: 4px;
 
   .tco-lights-out & {
     background-color: $color-foreground-on-tint;
+
+    .tco-card--motion-cta {
+      border-bottom-color: transparent;
+    }
   }
 
   &-title {
@@ -200,6 +205,7 @@ $container-offset: 4px;
   background-color: $color-classic-navy;
   color: $color-foreground-on-tint;
   text-align: left;
+  transform: translateY(-1px);
 
   * {
     overflow: hidden;
